update and text new function